--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@clerk/express": "^1.3.59",
     "@sentry/node": "^9.9.0",
+    "@sentry/profiling-node": "^9.9.0",
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.6.0",
     "cors": "^2.8.5",
