--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,2 @@
-VITE_CLERK_PUBLISHABLE_KEY=pk_test_c3RhYmxlLWVlbC00MC5jbGVyay5hY2NvdW50cy5kZXYk
+VITE_CLERK_PUBLISHABLE_KEY = ''
+VITE_BACKEND_URL = ''
