--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,15 @@
+JWT_SECRET=
+
+#MongoDB Setup
 MONGODB_URI = ""
+
+#Cloudniary Setup
+CLOUDINARY_NAME = ""
+CLOUDINARY_API_KEY = ""
+CLOUDINARY_SECRET_KEY = ""
+
+
+#Clerk Setup
+CLERK_WEBHOOK_SECRET = ""
+CLERK_PUBLISHABLE_KEY=''
+CLERK_SECRET_KEY=''
